ARROW-9827: [C++][Dataset] Skip parsing RowGroup metadata statistics when there is no filter